AD/DC 관련 개발내용 취합
