# domain-controller/docs/swagger.json
@@ -18,6 +18,38 @@
     "host": "ad-api.ablecloud.io",
     "basePath": "/api/v1",
     "paths": {
+        "/app": {
+            "get": {
+                "description": "윈도우 시작메뉴에 등록된 프로그램의 정보를 출력하는 API",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "윈도우 앱 목록",
+                "responses": {
+                    "200": {
+                        "description": "목록 표시",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.APPVAL"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "명령 실패",
+                        "schema": {
+                            "$ref": "#/definitions/main.errorModel"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "type": "objects"
+                        }
+                    }
+                }
+            }
+        },
         "/cmd/": {
             "get": {
                 "description": "powershell 명령 처리기",
@@ -51,13 +83,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "로그인 성공",
+                        "description": "명령 성공",
                         "schema": {
                             "$ref": "#/definitions/main.shellReturnModel"
                         }
                     },
                     "401": {
-                        "description": "로그인 실패",
+                        "description": "명령 실패",
                         "schema": {
                             "$ref": "#/definitions/main.errorModel"
                         }
@@ -120,6 +152,39 @@
             }
         },
         "/user": {
+            "get": {
+                "description": "사용자 목록 조회",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "사용자 목록 조회",
+                "responses": {
+                    "200": {
+                        "description": "사용자 생성 성공",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.ADUser"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "사용자 생성 실패",
+                        "schema": {
+                            "$ref": "#/definitions/main.errorModel"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "type": "objects"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "사용자 생성",
                 "consumes": [
@@ -182,15 +247,56 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "로그인 성공",
+                        "description": "사용자 생성 성공",
                         "schema": {
                             "$ref": "#/definitions/main.userModel"
                         }
                     },
                     "401": {
-                        "description": "로그인 실패",
+                        "description": "사용자 생성 실패",
                         "schema": {
                             "$ref": "#/definitions/main.userModel"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "type": "objects"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/{username}": {
+            "get": {
+                "description": "사용자 목록 조회",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "사용자 목록 조회",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "사용자 이름",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "사용자 생성 성공",
+                        "schema": {
+                            "$ref": "#/definitions/main.ADUser"
+                        }
+                    },
+                    "401": {
+                        "description": "사용자 생성 실패",
+                        "schema": {
+                            "$ref": "#/definitions/main.errorModel"
                         }
                     },
                     "default": {
@@ -204,6 +310,29 @@
         }
     },
     "definitions": {
+        "main.ADUser": {
+            "type": "object",
+            "properties": {
+                "i": {
+                    "description": "구/군/시",
+                    "type": "string"
+                }
+            }
+        },
+        "main.APPVAL": {
+            "type": "object",
+            "properties": {
+                "desc": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "path": {
+                    "type": "string"
+                }
+            }
+        },
         "main.errorModel": {
             "type": "object",
             "properties": {
